<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ten_app">Tikfans</string>
    <string name="ten_app_long">Tikfans - Get followers and likes for TT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chien_dich">Campaign</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="create_campaign_success">Create new campaign successful</string>
    <string name="tieu_de_don_dat_hang">Select your order</string>
    <string name="thoi_gian_tao">Created time</string>
    <string name="thoi_gian_ket_thuc">Finished time</string>
    <string name="simple_date_format">HH:mm MM/dd/yyyy</string>
    <string name="in_progress">In progress</string>
    <string name="xoa_chien_dich">Remove campaign</string>
    <string name="cam_on_vi_bao_cao">Thank you for your report</string>
    <string name="xoa_chien_dich_explain">Your campaign will be removed. You can not see the campaign again, your action can not undo. Are you sure to remove your campaign?</string>
    <string name="huy_bo">Cancel</string>
    <string name="xoa">Delete</string>
    <string name="dang_nhap_voi_tai_khoan">By continue, you agree with our Privacy Policy</string>
    <string name="khong_ket_noi">No internet connection</string>
    <string name="khong_ket_noi_chi_tiet">No internet connection. Please check your network and try again</string>
    <string name="nhan_duoc_coin">Received %d coins</string>
    <string name="khong_chien_dich">No Campaign</string>
    <string name="khong_chien_dich_chi_tiet">Your campaign appear here. Click add button to create campaign to get followers for your TT account.</string>
    <string name="chon">Select</string>
    <string name="hoan_thanh">Done</string>
    <string name="dat_hang_chi_tiet">Please make sure your video is live for everybody around the world</string>
    <string name="admob_banner_ad_unit_id" translatable="false">ca-app-pub-6131161498801038/6441092750</string>
    <string name="abmob_interstitial_ad_unit_id" translatable="false">ca-app-pub-6131161498801038/4409825781</string>
    <string name="admob_reward_ad_unit_id" translatable="false">ca-app-pub-6131161498801038/1188766079</string>
    <string name="admob_interstitial_reward_ad_unit_id" translatable="false">ca-app-pub-6131161498801038/7801403741</string>
    <string name="admob_open_app_ad_unit_id" translatable="false">ca-app-pub-6131161498801038/4250043680</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6131161498801038~6821695691</string>
    <string name="doi_tai_video">Loading video</string>
    <string name="tai_ads_loi">Failed to load ads. Please try later</string>
    <string name="mua_coin">%,d Coins</string>
    <string name="cap_nhat_app_tieu_deu">Update latest version</string>
    <string name="cap_nhat_app_chi_tiet">You have to update latest version to using this app.</string>
    <string name="doi_tai_khoan">Switch user</string>
    <string name="cai_dat_don_hang">Campaign settings</string>
    <string name="tong_chi_phi">Total coin:</string>
    <string name="so_luong_sub_chi_tiet">Select number of followers that you want to have</string>
    <string name="tao_chien_dich_canh_bao">Do not delete the video which you added in this campaign because people will can not found your video to follow to you. We will remove your campaign without refund if people can not watch your video.\n\nSome people may unfollow you or their account have been deleted, so real follower maybe less than your order.</string>
    <string name="seconds_ago">%d seconds ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="buy_coin">Buy coin</string>
    <string name="them_video_cua_ban">Add your video</string>
    <string name="tao_chien_dich">Create campaign</string>
    <string name="truoc_do">Previous</string>
    <string name="tiep">Next</string>
    <string name="bo_qua">Skip</string>
    <string name="slide1">Follow, view and like other profiles to earn coin</string>
    <string name="slide2">Use coin to create campaign for your profiles</string>
    <string name="slide3">Select number of followers, views, likes for your profiles</string>
    <string name="slide4">Check the progress and who followed, view and like your profiles</string>
    <string name="ket_thuc">Finish</string>
    <string name="rate_app">Rate app</string>
    <string name="tieu_de_danh_gia_ung_dung">Thank you for using this app</string>
    <string name="danh_gia_ung_dung_chi_tiet">Do this application useful to you? Please give us your feedback. Thank you so much.</string>
    <string name="mua_coin_giai_thich">Contact us if you have any problems with in app purchase by email follow.like.help@gmail.com</string>
    <string name="mua_thanh_cong">Buy success! You got %d coins</string>
    <string name="mua_that_bai">Buy failed, please contact if you lose money.</string>
    <string name="email_phai_hoi">follow.like.help@gmail.com</string>
    <string name="tieu_de_phan_hoi">Feedback about Tikfans application</string>
    <string name="feedback_text">Feedback from %s:</string>
    <string name="invite_failed">Invite failed</string>
    <string name="invite_subject">%s invite you to use Tikfans app which can help you boost followers for your TT profiles</string>
    <string name="invite_message">Let\'s install Tikfans together! Both you and I will get 1000 coin bonus when you install this app by my refer link:\n</string>
    <string name="invite_earn">Invite friends</string>
    <string name="invite_earn_detail">Earn 1000 coin for a referral</string>
    <string name="noi_dung_moi_ban_be">Invite your friend and earn 1000 coin for each referral by refer link bellow:</string>
    <string name="sao_chep_duong_dan">Copy link</string>
    <string name="moi">Invite</string>
    <string name="you_earned_by_referr">You earned total %d coin by invited your friends. This is list of your referral</string>
    <string name="get_invite_link_error">Get refer link error. Please try later</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="moi_ban_be">Invite friends</string>
    <string name="dang_tai">Loading...</string>
    <string name="you_dont_have_referral">You don\'t have referral, invite your friend to earn coin. \nTips: Make a TT video to promote this app and put your refer link, or comment your refer link to other video. Many people can found your refer link and you can earn big coin when they install this app</string>
    <string name="feedback">Feedback</string>
    <string name="thank_for_rating">Thank you for rating</string>
    <string name="kenh_khong_tim_thay">profiles not found</string>
    <string name="no_channel">No profiles</string>
    <string name="no_channel_extra">No profiles now. You can reload or click earn coin</string>
    <string name="sub_instruction">To follow this profile, your username on this app must be same with your username on TT</string>
    <string name="dang_ky">Follow</string>
    <string name="xem_cai_khac">See other</string>
    <string name="progress_subs">%d/%d Subs</string>
    <string name="title_detail_campaign">Campaign details</string>
    <string name="campaign_limitation">Campaigns limitation</string>
    <string name="campaign_limitation_details">We limit number of campaigns less than %d. You reached the limitation. Delete completed campaigns to create a new campaign.</string>
    <string name="reload">Reload</string>
    <string name="please_wait_loading_campaign">Please wait for loading campaign</string>
    <string name="people_subscriber_limitation">Last 100 followers on your profiles</string>
    <string name="people_subscriber">List of followers on your profiles</string>
    <string name="faq">FQA</string>
    <string name="faq1_question">How to get more followers on Tikfans</string>
    <string name="faq1_answer">First, You need to collect the coin by follow other profiles or make a purchase.\nwhen enough coin, You can create campaign to promote your profiles: in Campaign tab -> add button -> select your profiles and make order number of followers you want</string>
    <string name="faq3_question">Do Tikfans generate automatic followers? Is it safe for your profiles?</string>
    <string name="faq3_answer">No. As it is against TT terms and condition. All followers is real user. It is very safe with your profiles</string>
    <string name="faq4_question">Why real followers is not equal with order when create campaign</string>
    <string name="faq4_answer">Sometime user follow your profiles then unfollow or their account have been removed, so real followers maybe less than your order.</string>
    <string name="faq5_question">Can I unfollow the profiles which I follow to earn coin?</string>
    <string name="faq5_answer">You can not do it. If other people follow then unfollow, real followers of your profiles will be reduce. So we do not allow you unfollow the profiles you followed on this app. If you unfollow your profiles you followed on this app, We will block your account</string>
    <string name="subscribe_to_channel">Checking followed...</string>
    <string name="subscribe_to_channel_message">Please wait while we checking if you have followed this profiles</string>
    <string name="checking_subscriber">Checking all profiles you followed</string>
    <string name="checking_subscriber_message">If we found you unfollow any profiles, we may block your account.</string>
    <string name="unsubs_warning">unfollow warning</string>
    <string name="unsubs_warning_message">We We detected you unfollowing %d users .\nIf you still unfollow other users, your account will be blocked.</string>
    <string name="wait_for_sub">TT does not allow follow too fast. Please wait a while for next follower. You also can click earn coin while waiting.</string>
    <string name="chua_dang_ky_chi_tiet">You have to follow this profiles and like this video to get coin. If you followed and liked but can not get coin, please check if your account logged in TT app is %s. Sometime system delay so please try again.</string>
    <string name="dang_ky_lai">Follow again</string>
    <string name="faq6_question">Why I follow the profiles on TT app but cannot get coin when back to this app.</string>
    <string name="faq6_answer">If you followed this profiles but can not get coin, please check if your account logged in this app and TT app is same or not.</string>
    <string name="so_luong_sub">Number of followers</string>
    <string name="app_under_maintain">This app under maintain</string>
    <string name="app_under_maintain_message">We so sorry to notice that we are maintain this app for keep it work well. It will take few hours.\nPlease try again later.</string>
    <string name="deleting_channel">Deleting profiles</string>
    <string name="vip_account">VIP account</string>
    <string name="xem_video_ads">Watch ads video</string>
    <string name="chon_loai_chien_dich">Select the campaign type</string>
    <string name="loai_chien_dich_tang_sub">Get followers for your TT</string>
    <string name="loai_chien_dich_tang_luot_thich">Get likes for your video</string>
    <string name="send_message">Send message to everybody</string>
    <string name="send">Send</string>
    <string name="message_text">Message text</string>
    <string name="message_cost">Message cost: %d coins</string>
    <string name="continue_string">Continue</string>
    <string name="login_explain_text">*Input your TT username, not your display name</string>
    <string name="other_apps">Other apps</string>
    <string name="subchat">Subchat - Sub4Sub</string>
</resources>