<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dip"
    android:layout_marginEnd="24dip"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/send_message"
            android:textColor="@color/color_dialog_body_text"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:maxLength="250"
            android:hint="@string/message_text"></EditText>

        <TextView
            android:id="@+id/message_total_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_cost"></TextView>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btnSend"
                android:text="@string/huy_bo" />

            <Button
                android:id="@+id/btnSend"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/send" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
