<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FQAActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/toolbar_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_back_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@+id/toolbar_back"
                    android:text="@string/faq"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fqa_space"
                android:layout_marginTop="@dimen/fqa_space"
                android:text="@string/faq1_question"
                android:textSize="@dimen/fqa_question_textsize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fqa_space"
                android:textSize="@dimen/fqa_answer_textsize"
                android:text="@string/faq1_answer" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay"></View>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay">
            </View>

            <TextView
                android:layout_marginTop="@dimen/fqa_space"
                android:layout_marginBottom="@dimen/fqa_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq3_question"
                android:textStyle="bold"
                android:textSize="@dimen/fqa_question_textsize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq3_answer"
                android:layout_marginBottom="@dimen/fqa_space"
                android:textSize="@dimen/fqa_answer_textsize"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay">
            </View>

            <TextView
                android:layout_marginTop="@dimen/fqa_space"
                android:layout_marginBottom="@dimen/fqa_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq4_question"
                android:textStyle="bold"
                android:textSize="@dimen/fqa_question_textsize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq4_answer"
                android:layout_marginBottom="@dimen/fqa_space"
                android:textSize="@dimen/fqa_answer_textsize"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay">
            </View>

            <TextView
                android:layout_marginTop="@dimen/fqa_space"
                android:layout_marginBottom="@dimen/fqa_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq5_question"
                android:textStyle="bold"
                android:textSize="@dimen/fqa_question_textsize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq5_answer"
                android:layout_marginBottom="@dimen/fqa_space"
                android:textSize="@dimen/fqa_answer_textsize"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay">
            </View>

            <TextView
                android:layout_marginTop="@dimen/fqa_space"
                android:layout_marginBottom="@dimen/fqa_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq6_question"
                android:textStyle="bold"
                android:textSize="@dimen/fqa_question_textsize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq6_answer"
                android:layout_marginBottom="@dimen/fqa_space"
                android:textSize="@dimen/fqa_answer_textsize"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>