<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/myProfilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myProfilePic"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ten_app_long"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"></RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/login_edit_text_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/explain_text"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        android:gravity="center"
        android:hint="\@Username"
        android:textSize="20dp"></EditText>

    <TextView
        android:id="@+id/explain_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/google_sign_in_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/login_explain_text"
        android:textSize="16dp" />


    <Button
        android:id="@+id/google_sign_in_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/continue_string"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_sign_in_button"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/dang_nhap_voi_tai_khoan"
        android:textSize="16dp" />

    <ImageView
        android:visibility="invisible"
        android:id="@+id/help_get_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_privacy_policy"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/help_get_user_name"
        android:scaleType="center"></ImageView>


</RelativeLayout>